--- a/Random_Snippets_Linux.ipynb
+++ b/Random_Snippets_Linux.ipynb
@@ -38,6 +38,27 @@
     "#To choose number of characters/lines (1000 characters)\n",
     "$ cat filename.fa | head --bytes 1000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4be771f-60cb-47ad-9710-9f2e8cf8b754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Git\n",
+    "#Make git folder\n",
+    "$ git init\n",
+    "\n",
+    "#make git ignore (add file names you will want to ignore, usually *.ipynb_checkpoints)\n",
+    "$ nano .gitignore\n",
+    "\n",
+    "#add all changes then commit all changes\n",
+    "$ git add .\n",
+    "$ git commit -m \"changes made\"\n",
+    "\n",
+    "#create remote on github.com\n"
+   ]
   }
  ],
  "metadata": {
