Adding git snippets

--- a/Random_Snippets_Linux.ipynb
+++ b/Random_Snippets_Linux.ipynb
@@ -50,14 +50,32 @@
     "#Make git folder\n",
     "$ git init\n",
     "\n",
-    "#make git ignore (add file names you will want to ignore, usually *.ipynb_checkpoints)\n",
+    "#Make git ignore (add file names you will want to ignore, usually *.ipynb_checkpoints)\n",
     "$ nano .gitignore\n",
     "\n",
-    "#add all changes then commit all changes\n",
+    "#Add all changes then commit all changes\n",
     "$ git add .\n",
     "$ git commit -m \"changes made\"\n",
     "\n",
-    "#create remote on github.com\n"
+    "#To check status of git changes\n",
+    "$ git status\n",
+    "\n",
+    "#Create remote on github.com\n",
+    "#Create private repository on github.com and copy the ssh link then:\n",
+    "$ git remote add origin git@github.com:JakeJackson22/Code_Snippets.git\n",
+    "\n",
+    "#To check if worked\n",
+    "$ git remote -v\n",
+    "\n",
+    "#Add code to show how to set up ssh...\n",
+    "#To check ssh key pairs that already exist\n",
+    "$ ls -al ~/.ssh\n",
+    "\n",
+    "#To push the changes made on local to remote on github\n",
+    "$ git push origin main\n",
+    "\n",
+    "#To pull changes made to the remote on github to local\n",
+    "$ git pull origin main"
    ]
   }
  ],
