Rclone script changes

--- a/Random_Snippets_Linux.ipynb
+++ b/Random_Snippets_Linux.ipynb
@@ -71,7 +71,7 @@
     "#To check ssh key pairs that already exist\n",
     "$ ls -al ~/.ssh\n",
     "\n",
-    "#To push the changes made on local to remote on github\n",
+    "#To push the changes made on local to remote on github (will ask for password)\n",
     "$ git push origin main\n",
     "\n",
     "#To pull changes made to the remote on github to local\n",
