--- a/Rclone_setup.ipynb
+++ b/Rclone_setup.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Rclone setup\n",
     "\n",
-    "- Cellgen rclone documentation: https://cellgeni.readthedocs.io/en/latest/rclone.html#mount"
+    "- Cellgen rclone documentation: https://cellgeni.readthedocs.io/en/latest/rclone.html#mount\n",
+    "- mainly created by Antony Rose"
    ]
   },
   {
@@ -198,11 +199,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python (scanpy_louise)",
+   "language": "python",
+   "name": "scanpy_louise"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
