git and bam code snippet changes and git ignore edit

--- a/Code_Snippets_Git_BAMviewing.ipynb
+++ b/Code_Snippets_Git_BAMviewing.ipynb
@@ -5,18 +5,7 @@
    "id": "e4d9f5ad-a03e-4f2b-881b-323af4d4c3ee",
    "metadata": {},
    "source": [
-    "# Random snippets: Linux"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f7fbac7-24b3-4686-919b-c67e4fbbb990",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#On Jhub\n",
-    "$ ssh jj19@farm5-login.internal.sanger.ac.uk"
+    "# Code Snippets for Linux: Git and viewing BAM files"
    ]
   },
   {
